api: update user roles and groups
