# adapters/api/server/user.go
@@ -8,6 +8,7 @@ import (
 	"github.com/lejeunel/go-image-annotator/adapters/api/models"
 	u "github.com/lejeunel/go-image-annotator/entities/user"
 	"github.com/lejeunel/go-image-annotator/use-cases/user/create"
+	upd "github.com/lejeunel/go-image-annotator/use-cases/user/update-privileges"
 )
 
 func (s *Server) CreateUser(w http.ResponseWriter, r *http.Request) {
@@ -25,7 +26,11 @@ func (s *Server) CreateUser(w http.ResponseWriter, r *http.Request) {
 	}
 
 	s.User.Create.Execute(
-		r.Context(), req, p.NewCreatePresenter(w, s.Logger))
+		r.Context(), req, p.NewPresenter(w, s.Logger))
+}
+
+func (s *Server) DeleteUserById(w http.ResponseWriter, r *http.Request, id string) {
+	s.User.Delete.Execute(r.Context(), id, p.NewPresenter(w, s.Logger))
 }
 
 func (s *Server) WhoAmI(w http.ResponseWriter, r *http.Request) {
@@ -40,4 +45,14 @@ func (s *Server) WhoAmI(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	http.Error(w, "failed fetching user's identity", http.StatusBadRequest)
+}
+
+func (s *Server) UpdateUser(w http.ResponseWriter, r *http.Request, id string) {
+	body, ok := json.MustDecodeJSON[models.UserPrivileges](w, r)
+	if !ok {
+		return
+	}
+
+	req := upd.Request{Id: id, Groups: body.Groups, Roles: body.Roles}
+	s.User.UpdatePrivileges.Execute(r.Context(), req, p.NewPresenter(w, s.Logger))
 }
